--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         </li>
         <li class="list-group-item">
           <a href="/?s=td">今日代理</a>
+          <a href="/?s=td">今日代理</a>
         </li>
       </ul>
     </div>
@@ -15,9 +16,11 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <!--<p><%= title %></p>-->
+          <!--<p><%= title %></p>-->
         </div>
         <ul class="nav nav-tabs">
           <li class=""><a href="#">国内代理</a></li>
+          <li class="active"><a href="#">国外代理</a></li>
           <li class="active"><a href="#">国外代理</a></li>
         </ul>
         <div class="panel-body">
